Fix poor contrast for links in info bars

--- a/assets/global.scss
+++ b/assets/global.scss
@@ -3,3 +3,7 @@
 .v-application.app {
   background: var(--v-background-base);
 }
+
+.info-bar a {
+  color: whitesmoke;
+}
